[project]
name = "comfyui-digit"
version = "2.1.4"
description = "DIGIT nodes for ComfyUI — Gemini image generation, Veo video generation, Seedance 2.0 video generation, LLM query, and project-based saving."
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests",
    "google-auth",
    "google-genai",
    "google-cloud-storage",
    "piexif",
    "opencv-python",
    "fal-client",
    "soundfile",
]

[project.urls]
Repository = "https://github.com/thedepartmentofexternalservices/comfyui-digit"

[tool.comfy]
PublisherId = "digit"
DisplayName = "DIGIT Nodes"
