[project]
name = "comfyui-digit"
version = "4.0.0"
description = "DIGIT — Deep Infrastructure for Generative Image Training. ComfyUI nodes for Gemini generation, Veo + Seedance 2.0 video, LoRA training, dataset management, and auto-captioning."
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests",
    "google-auth",
    "google-genai",
    "google-cloud-storage",
    "piexif",
    "opencv-python",
    "pyyaml",
    "fal-client",
    "replicate",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]
training = [
    "torch>=2.1.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "peft>=0.12.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "tensorboard",
    "wandb",
    "safetensors",
]

[project.urls]
Repository = "https://github.com/thedepartmentofexternalservices/comfyui-digit"

[tool.comfy]
PublisherId = "digit"
DisplayName = "DIGIT Nodes"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
consider_namespace_packages = false
markers = [
    "integration: requires ComfyUI install, live APIs, or pipeline mounts",
]
addopts = "-m 'not integration' -p tests.pytest_plugin"
norecursedirs = ["scripts", "web", "workflows", "configs", ".git", ".pytest_cache"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
